[fix] docs-urlの修正
